objects/AIA_Benefit_Design_Form__c.object
<CustomObject>
    <fields>
        <fullName>Grandchildren__c</fullName>
        <inlineHelpText>Court Ordered Custody Requirement</inlineHelpText>
        <label>Grandchildren</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Child_Dependent_Mandates__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Separate with commas and a space</inlineHelpText>
        <label>Group Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Habilitative_Services_for_Children__c</fullName>
        <label>Habilitative Services for Children</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header_Information_Drawloop__c</fullName>
        <formula>IF(  RecordType.DeveloperName = 'Admin','Administration',IF(RecordType.DeveloperName= 'MCP_Full_Managed_Care','MANAGED CARE PROGRAM',IF(RecordType.DeveloperName= 'MCP_Non_Standard','MANAGED CARE PROGRAM','Domestic Partnership')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header Information Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <formula>'The Group opposes providing coverage for some or all of the contraceptive services required to be covered under section 2713 of the PHS Act and the companion provisions of ERISA and the Code on account of religious objections. The Group organized and operates as a nonprofit entity. The Group holds itself out as a religious organization. The Group has provided CareFirst with an HHS-approved self-certification stating it satisfies all the religious accommodation criteria.'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Health_Care__c</fullName>
        <label>Home Health Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospice_Care__c</fullName>
        <inlineHelpText>Inpatient Hospice is treated as Inpatient Hospital</inlineHelpText>
        <label>Hospice Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_Full_Time_Hrs__c</fullName>
        <label>Full-time Minimum Hours per Work Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly_Full_Time__c</fullName>
        <label>Hourly Full-time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_Part_Time_Hrs__c</fullName>
        <label>Part-time Minimum Hours per Work Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly_Part_Time__c</fullName>
        <label>Hourly Part-time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_months_3_36_have_the_Subscrib__c</fullName>
        <inlineHelpText>Enter a number from 3-36</inlineHelpText>
        <label>Answer C5a</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Card_Number__c</fullName>
        <inlineHelpText>Indicate Number to use</inlineHelpText>
        <label>ID Card Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Generate</fullName>
                    <default>true</default>
                    <label>Auto Generate</label>
                </value>
                <value>
                    <fullName>Assigned Series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Cards_Sent_to_Section__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Cards Sent to Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVF__c</fullName>
        <label>IVF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identity_Protection_From_BRF_Drawloop__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Identity_Protection__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identity Protection From BRF Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Protection__c</fullName>
        <formula>TEXT( Benefit_Design__r.Identity_Protection__c )</formula>
        <label>Identity Protection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Enrollment__c</fullName>
        <label>ID Cards Sent To: Initial Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribers Home Address</fullName>
                    <default>true</default>
                    <label>Subscribers Home Address</label>
                </value>
                <value>
                    <fullName>Local Install</fullName>
                </value>
                <value>
                    <fullName>Account HQ</fullName>
                </value>
                <value>
                    <fullName>Control Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_DM_Wellness__c</fullName>
        <inlineHelpText>Self-Insured only may select No and must complete a Health &amp; Wellness Request Form</inlineHelpText>
        <label>Integrated DM/Wellness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intimate_Effective_Date__c</fullName>
        <description>Intimate Partner Violent Screening Effective Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Intimate Partner Violent Screening Effective Date</inlineHelpText>
        <label>Intimate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jurisdiction1__c</fullName>
        <description>This is technical field used for Admin Form</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Jurisdiction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>(Benefit_Design__r.Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_AttachmentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Enrollment_Date__c</fullName>
        <formula>Benefit_Design__r.Account__r.Latest_Enrollment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Drawloop_From_Admin__c</fullName>
        <formula>Text(Benefit_Design__r.Admin_Legal_Entity_Drawloop__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Drawloop From Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFMI</fullName>
                </value>
                <value>
                    <fullName>GHMSI</fullName>
                </value>
                <value>
                    <fullName>CFBC</fullName>
                </value>
                <value>
                    <fullName>CFBC and GHMSI</fullName>
                </value>
                <value>
                    <fullName>CFBC and CFMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_K_Group_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Local  K Group Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCP_Checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCP Checkbox2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCP_Checkbox3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCP Checkbox3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCP_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCP Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCP_Other_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Vendor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCP_Other_Vendor_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Vendor Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Mic__c</fullName>
        <label>MD Mic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Care_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Additional and/or Nonstandard Managed Care Provisions</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_Classification_Comments__c</fullName>
        <formula>"National Account is an account with locations (warehouse, sales office, etc.) in more than one Licensee’s service area. If an account has employees, retirees, or telecommuter’s located outside of the Licensee’s service are, however does not have an office located outside of the Licensee’s service area, these members are not deemed National Account members."</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment Classification Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_Classification__c</fullName>
        <label>Market Segment Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Med_eligible_Child_Dpdt_of_DomPart_Comms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Med-eligible Child Dpdt of DomPart Comms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_COB_Type__c</fullName>
        <label>Medicare COB Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
                <value>
                    <fullName>Modified Aggregate</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Non-Duplication</fullName>
                </value>
                <value>
                    <fullName>Carve Out</fullName>
                </value>
                <value>
                    <fullName>Non-Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_COB_pay_and_Pursue__c</fullName>
        <formula>IF((Funding_Arrangement_Drawloop__c == 'Risk' &amp;&amp; Jurisdiction__c == 'VA' &amp;&amp; (Text(ERISA_Status__c) == 'Yes' || Text(ERISA_Status__c) == 'No' )),'No',
IF((Funding_Arrangement_Drawloop__c == 'ASO' &amp;&amp; Jurisdiction__c == 'VA' &amp;&amp; Text(ERISA_Status__c) == 'No'),'No','Yes'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medicare COB Pay and Pursue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_Part_B_Carve_Out_Comments_Drwlp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Part B Carve Out Comments Drwlp</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medicare_Part_B_Carve_Out_Comments__c</fullName>
        <defaultValue>"If your benefit design package contains CFMI Traditional, MediComp, and Standard Medicare Complimentary (with or without Major Medical) products, you must select a Yes value."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Part B Carve Out Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medicare_Part_B_Carve_Out__c</fullName>
        <inlineHelpText>Carve out and reject the portion Medicare would have paid for Medicare eligible beneficiaries</inlineHelpText>
        <label>Medicare Part B Carve Out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_Secondary_Payer__c</fullName>
        <inlineHelpText>MSP is the number of employees that the account has</inlineHelpText>
        <label>Medicare Secondary Payer (# of EEs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicare_eligible_Child_Dependents_of_DP__c</fullName>
        <label>Medicare-eligible Child Dependents of DP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_eligible_Child_Dependents_of_Do__c</fullName>
        <label>Medicare-eligible Child Dependents of Do</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_eligible_Domestic_Partner_Comms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare-eligible Domestic Partner Comms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_eligible_Domestic_Partner__c</fullName>
        <label>Medicare-eligible Domestic Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Sex</fullName>
                </value>
                <value>
                    <fullName>Opposite Sex</fullName>
                </value>
                <value>
                    <fullName>Same &amp; Opposite Sex</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_eligible_Retiree__c</fullName>
        <label>Medicare-eligible Retiree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_eligible_retiree_Comms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare-eligible retiree Comms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_4a__c</fullName>
        <inlineHelpText>Federal Mandate - Applies to both fully-insured and self-insured accounts that provide a limiting age for student dependents that is greater than age 26.</inlineHelpText>
        <label>Michelle's Law</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_Comments1__c</fullName>
        <defaultValue>"Self-insured accounts that provide a Limiting Age for student Dependents beyond the Limiting Age for all Dependents must select.This mandate requires that health benefits be provided to an eligible student Dependent with a documented disability who cannot attend school (or attend full-time) until the earlier of one-year or until he/she reaches the Limiting Age for students."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Michelle’s Law Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_Comments_New__c</fullName>
        <defaultValue>"This Mandate requires that health benefits be provided to an eligible student Dependent with a documented disability who cannot attend school (or attend full-time) until the earlier of one-year or until he/she reaches the Limiting Age for student Dependents. If the student remains disabled after one-year and still has not reached the Limiting Age for student Dependents, the student may remain eligible under Maryland’s part-time students with disabilities law described below. CareFirst may require an enrollee to provide verification of the disability from a disabilities services professional at the school or a health care provider with special expertise in and knowledge of the disability."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Michelle’s Law Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_Comments__c</fullName>
        <defaultValue>"Applies to both fully insured and self-insured accounts that provide a limiting age for student dependents that is greater than age 26. This Mandate requires that health benefits be provided to an eligible student Dependent with a documented disability who cannot attend school (or attend full-time) until the earlier of one-year or until he/she reaches the Limiting Age for student Dependents. If the student remains disabled after one-year and still has not reached the Limiting Age for student Dependents,the student may remain eligible under Maryland’s part-time students with disabilities law described below. CareFirst may require an enrollee to provide verification of the disability from a disabilities services professional at the school or a health care provider with special expertise in and knowledge of the disability."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Michelle's Law Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_Federal_Mandate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Michelle’s Law – Federal Mandate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_Limit_Age__c</fullName>
        <inlineHelpText>If Child Dependent Mandates is DC/VA then Michelle's Law Limit Age will be defaulted to "26" if no value entered.</inlineHelpText>
        <label>Michelle's Law Limit Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_New__c</fullName>
        <inlineHelpText>Federal Mandate</inlineHelpText>
        <label>Michelle’s Law</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_Removal__c</fullName>
        <label>Michelle's Law Removal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Child_Dependent_Mandates__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of Calendar Month</fullName>
                </value>
                <value>
                    <fullName>Birthdate</fullName>
                </value>
                <value>
                    <fullName>End of Calendar Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_Waiver_4a__c</fullName>
        <inlineHelpText>Applies to fully-insured accounts that provide Dependent coverage.  Self-insured accounts may select</inlineHelpText>
        <label>Michelle's Law Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michelle_s_Law_Waiver__c</fullName>
        <inlineHelpText>Waiver of court ordered custody requirement for grandchildren</inlineHelpText>
        <label>Michelle's Law Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Child_Dependent_Mandates__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michelle_s_Law__c</fullName>
        <inlineHelpText>Federal Mandate</inlineHelpText>
        <label>Michelle's Law</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Child_Dependent_Mandates__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NASCO_Original_Effective_Date__c</fullName>
        <description>Updated the formula to reduce the hops Old Formula : Benefit_Design__r.Benefit_Request_Form__r.Account__r.NASCO_Original_Effective_Date__c</description>
        <formula>/*Benefit_Design__r.Benefit_Request_Form__r.Account__r.NASCO_Original_Effective_Date__c*/
 Benefit_Design__r.Account__r.NASCO_Original_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NASCO Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Enrollment__c</fullName>
        <inlineHelpText>Within 30 days - Applies to BlueChoice fully-insured accounts    
Within 60 days - Applies to CFMI/GHMSI fully-insured accounts</inlineHelpText>
        <label>New Hire Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Within 30 days</fullName>
                </value>
                <value>
                    <fullName>Within 60 Days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nonprofit__c</fullName>
        <inlineHelpText>National Account is an account with locations (warehouse, sales office, etc.) in more than one Licensee’s service area. If an account has employees, retirees, or telecommuter’s located outside of the Licensee’s service are, however does not have an office</inlineHelpText>
        <label>Nonprofit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Eligibles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>New Business Only</inlineHelpText>
        <label>Number Of Eligibles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Eligible_Drawloop__c</fullName>
        <formula>TEXT(Benefit_Design__r.Benefit_Request_Form__r.Contract_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Eligible Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Private_Duty_Nursing__c</fullName>
        <inlineHelpText>Available for CFMI non-BluePreferred fully-insured accounts or self-insured accounts selecting Full Managed Care program</inlineHelpText>
        <label>OP Private Duty Nursing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No member penalty</fullName>
                </value>
                <value>
                    <fullName>20% penalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oppose_Contracteptive_Service__c</fullName>
        <label>Oppose Contraceptive Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Effective_Date__c</fullName>
        <description>Old Formula value: Benefit_Design__r.Account__r.Account_Effective_Date__c
Changed as per: https://www13.v1host.com/CareFirst/Search.mvc/Advanced?q=3983

Updated the formula to reduce the number of hops Old Formula : Benefit_Design__r.Benefit_Request_Form__r.Account__r.NASCO_Original_Effective_Date__c</description>
        <formula>/*Benefit_Design__r.Benefit_Request_Form__r.Account__r.NASCO_Original_Effective_Date__c*/
 Benefit_Design__r.Account__r.NASCO_Original_Effective_Date__c</formula>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_New_Hire_Enrollment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Enrollment Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Party_Liability_Financing__c</fullName>
        <defaultValue>"NOTE 1:COB – Regular is used as the standard for DC control accounts. Any selection other than COB-Regular for a DC control group requires non-standard approval through the SOCS process.  NOTE 2:  COB – Pay and Pursue option is the standard.  Fully-insured Accounts must select Pay and Pursue. NOTE 3:  If COB type equals Modified Aggregate, Medicare Product COB Type should equal Non-Duplication or Modified Aggregate. "</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Party Liability / Financing</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Text_and_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Text and Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDH Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others_Eligible_for_Coverage__c</fullName>
        <defaultValue>"NOTE: If domestic partner is selected, self-insured accounts may complete the optional, separate DOMESTIC PARTNERS EXCEPTION REQUEST FORM found in the SRG in the ADMIN section."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Others Eligible for Coverage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCMH_TCCI_Program_Help_Text__c</fullName>
        <formula>"Effective 1/1/2011 Fully Insured must select yes.  Effective 7/1/13 core to Self-Insured"</formula>
        <label>PCMH / TCCI Program Help Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPACA_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PPACA Selected</description>
        <label>PPACA Selected</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>